--- a/Javascript/homework/responses/2.1-css-linking.md
+++ b/Javascript/homework/responses/2.1-css-linking.md
@@ -4,7 +4,15 @@
 
 This week, we're going to take the HTML and JavaScript code we wrote last week and style our page using CSS to make it more aesthetically pleasing.  
 
-- Copy your index.html file into a new html file in your week 2 homework folder.
+- First you're going to create a new folder called week 2 within your orginal directory. You should now have two folders called "Week 1" and "Week 2"
+
+![Folders](https://i.gyazo.com/65456175a2f8c6c419a9ed354439c77f.png)
+
+- Next Copy your index.html file from week 1 then paste it in your week 2 homework folder.
+
+![Copy](https://i.gyazo.com/b2fa8ced536088a0ce51ffb0a9fc6409.gif)
+
+- Next you're going to open Visual Studio Code then at the top left click file, click Open folder then find your java script folder which then you're going to open week 2.
 
 To style our webpage, we must link a css file to our HTML file.  
 
