--- a/Javascript/homework/responses/2.1-css-linking.md
+++ b/Javascript/homework/responses/2.1-css-linking.md
@@ -14,10 +14,19 @@ This week, we're going to take the HTML and JavaScript code we wrote last week a
 
 - Next you're going to open Visual Studio Code then at the top left click file, click Open folder then find your java script folder which then you're going to open week 2.
 
-To style our webpage, we must link a css file to our HTML file.  
+Once were in Visual Studio Code we're going to need to style our webpage, First we must link a CSS file to our HTML file.  
 
 - Add a `link` tag inside the head of your html file
   - Set the `rel` attribute to `"stylesheet"` and the `href` attribute to `"style.css"`.
+ <details><summary>Having Issues? Click Me!</summary>
+<p>
+
+```html
+<link rel="stylesheet" href="styles.css"
+```
+
+</p>
+</details>
 
 Next, open a new file in your week 2 folder and save it as `style.css`. It's important that your file name matches the one you typed in your HTML document in its link tag's `href` attribute, as this will be what links your two files.
 
