--- a/Javascript/homework/responses/2.2-body.md
+++ b/Javascript/homework/responses/2.2-body.md
@@ -16,6 +16,27 @@ Inside the body, you can also change the color of the background, as well as the
 
 `font-family: "Trebuchet MS", Verdana, sans-serif;`
 
+<details><summary>Having Issues? Click Me!</summary>
+<p>
+
+```css
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    font-family: "Trebuchet MS", Verdana, sans-serif;
+}
+```
+</p>
+</details>
+
+#### After Finishg Task Two You should of have within your code
+- [x] A Body Moving Your Clock To The Middle Of Your Screen.
+- [x] And Realigns All Your Text To The Right.
+
+![FinishedProduct](https://i.gyazo.com/58ff08d2ec3e68046c2420969d117ae3.png)
+
 #### Open a pull request for your code
 
 Just as you did for your previous tasks, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  For example, my GitHub username is `danzelo1` so my branch name for week 2's second task (this assignment) would be `danzelo1-2-2`.
