--- a/Javascript/homework/responses/2.3-clock-design.md
+++ b/Javascript/homework/responses/2.3-clock-design.md
@@ -4,26 +4,29 @@
 
 After you're satisfied with the body of your page, define a selector that styles elements in the `clock` class.
 
-![clock-selector](https://user-images.githubusercontent.com/32557138/106408305-39f9f600-640c-11eb-896d-f46a14259227.png)
+<details><summary>What is a selector?</summary>
+<p>
 
-- Set a width and a height for the box that's going to hold your time  
-- Add a background and a solid border using colors different from the screen's background so you can see what the box will look like.
+#### CSS selectors are used to "find" (or select) the HTML elements (which is going to be our time div) that you want to style.
+
+```css
+.Clock{
+
+}
+```
+
+</p>
+</details>
+
+### Once you have a selector that is defineing .clock we're going to move onto the steps below.
+- Within your new .clock body you're going to set a width and a height to 100px. That's going to hold your time  
+- Then add a background and a solid border using colors different from the screen's background so you can see what the box will look like.
   - Use the `background-color` and `border` attributes for these items respectively
 
 - Set your `display` to `flex` 
 - Center your text using `align-items` and `justify-content` 
 
-You need to do this again because these attributes in the body only centered the box on your page; repeating the two bullets above in the clock section will center your text within the box.
-
 You may also want to adjust the margins of your clock so that theres some space between the box and the form - I simply adjusted the left margin of my clock.
-
-You can add as many bells and whistles to this clock that you please.  I increased the font-size here and added a box-shadow to add some depth to my clock.
-
-![clock-color](https://user-images.githubusercontent.com/32557138/106408362-4b430280-640c-11eb-9247-75e983d93da1.png)
-
-The first number in each line represents the x-offset which is the horizontal distance from which you want the object to appear.  The second number is the y-offset - the vertical distance from which the box will appear.  The third number is the blur radius - a larger blur radius will create a bigger shadow and vice versa. 
-
-Lastly is the color.  I used the `rgba()` tool to define my color.  The first 3 numbers represent the amount of red, green, and blue in the color, respectively. The fourth number is the opacity on a scale from 0 to 1, with 0 being complete transparency and 1 being fully opaque.
 
 #### Open a pull request for your code
 
