--- a/Javascript/homework/responses/2.3-clock-design.md
+++ b/Javascript/homework/responses/2.3-clock-design.md
@@ -28,6 +28,46 @@ After you're satisfied with the body of your page, define a selector that styles
 
 You may also want to adjust the margins of your clock so that theres some space between the box and the form - I simply adjusted the left margin of my clock.
 
+<details><summary>Only Open This Once You Finished Your Code</summary>
+<p>
+
+
+```css
+.Clock{
+    width: 100px;
+    height: 100px;
+    background-color: aqua;
+    border: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+}
+```
+
+
+</p>
+</details>
+
+#### After Finishg Task Three You should have within your code
+- [x] A Selector That Is Referencing Off The .Clock Class
+- [x] And Added Colors And Layouts within your .Clock Class Body
+
+<details><summary>RGBA Tool (Optional Not Required)</summary>
+<p>
+
+The RGBA tool is just a way to increase color output of your choosing. It is in no way required within this program but if you're wanting to do more research about it we encourge you guys to do so!
+
+![picture](https://i.imgur.com/bsQld9J.png)
+
+The first number in each line represents the x-offset which is the horizontal distance from which you want the object to appear. The second number is the y-offset - the vertical distance from which the box will appear. The third number is the blur radius - a larger blur radius will create a bigger shadow and vice versa.
+
+Lastly is the color. I used the rgba() tool to define my color. The first 3 numbers represent the amount of red, green, and blue in the color, respectively. The fourth number is the opacity on a scale from 0 to 1, with 0 being complete transparency and 1 being fully opaque.
+
+
+</p>
+</details>
+
 #### Open a pull request for your code
 
 Once again, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  
