--- a/Javascript/homework/responses/2.4-form-layout.md
+++ b/Javascript/homework/responses/2.4-form-layout.md
@@ -8,7 +8,7 @@ Lastly, you'll define a timezone selector to style the labels and buttons used f
 
 If you're already satisfied with how your page looks because of how you styled the body, then this part is unnecessary, but I recommend you do some styling here to get a better hang of CSS attributes.
 
-#### After Finishg Task Four You should have within your code
+#### After Finishing Task Four You should have within your code
 - [x] A Selector That Is Referencing Off The .timezone Class
 - [x] And Added Colors And Layouts within your .timezone Class Body (Which is only optional if you wanted to) 
 
