--- a/Javascript/homework/responses/2.1-css-linking.md
+++ b/Javascript/homework/responses/2.1-css-linking.md
@@ -30,6 +30,10 @@ Once were in Visual Studio Code we're going to need to style our webpage, First 
 
 Next, open a new file in your week 2 folder and save it as `style.css`. It's important that your file name matches the one you typed in your HTML document in its link tag's `href` attribute, as this will be what links your two files.
 
+#### After Finishg Task Three You should have within your code
+- [x] A Reference Or (Href) And Link To The "styles.css"
+- [x] Created A New File Called 'style.css'
+
 #### Open a pull request for your code
 
 Just as you did for your previous tasks, be sure create a new branch, titled `[your GitHub username]-[week]-[task number]`, for your task.  For example, my GitHub username is `danzelo1` so my branch name for week 2's first task (this assignment) would be `danzelo1-2-1`.
