--- a/Javascript/homework/responses/2.1-css-linking.md
+++ b/Javascript/homework/responses/2.1-css-linking.md
@@ -30,7 +30,7 @@ Once were in Visual Studio Code we're going to need to style our webpage, First 
 
 Next, open a new file in your week 2 folder and save it as `style.css`. It's important that your file name matches the one you typed in your HTML document in its link tag's `href` attribute, as this will be what links your two files.
 
-#### After Finishing Task Three You should have within your code
+#### After Finishing Task One You should have within your code
 - [x] A Reference Or (Href) And Link To The "styles.css"
 - [x] Created A New File Called 'style.css'
 
