--- a/Javascript/homework/responses/2.3-clock-design.md
+++ b/Javascript/homework/responses/2.3-clock-design.md
@@ -49,7 +49,7 @@ You may also want to adjust the margins of your clock so that theres some space 
 </p>
 </details>
 
-#### After Finishg Task Three You should have within your code
+#### After Finishing Task Three You should have within your code
 - [x] A Selector That Is Referencing Off The .Clock Class
 - [x] And Added Colors And Layouts within your .Clock Class Body
 
