--- a/Javascript/homework/responses/2.2-body.md
+++ b/Javascript/homework/responses/2.2-body.md
@@ -31,7 +31,7 @@ body{
 </p>
 </details>
 
-#### After Finishg Task Two You should have within your code
+#### After Finishing Task Two You should have within your code
 - [x] A Body Moving Your Clock To The Middle Of Your Screen.
 - [x] And Realigns All Your Text To The Right.
 
