--- a/Javascript/homework/responses/2.1-css-linking.md
+++ b/Javascript/homework/responses/2.1-css-linking.md
@@ -12,7 +12,7 @@ This week, we're going to take the HTML and JavaScript code we wrote last week a
 
 ![Copy](https://i.gyazo.com/b2fa8ced536088a0ce51ffb0a9fc6409.gif)
 
-- Next you're going to open Visual Studio Code then at the top left click file, click Open folder then find your java script folder which then you're going to open week 2.
+- Next, open this folder in Visual Studio Code.  You can do this by clicking "Open folder..." on VSC's Welcome page and selecting your path.
 
 Once were in Visual Studio Code we're going to need to style our webpage, First we must link a CSS file to our HTML file.  
 
@@ -28,11 +28,11 @@ Once were in Visual Studio Code we're going to need to style our webpage, First 
 </p>
 </details>
 
-Next, open a new file in your week 2 folder and save it as `style.css`. It's important that your file name matches the one you typed in your HTML document in its link tag's `href` attribute, as this will be what links your two files.
+Next, create a new file in your week 2 folder called `style.css`. It's important that your file name matches the one you typed in your link tag's `href` attribute in your HTML file, as this will be what links your two files.
 
-#### After Finishing Task One You should have within your code
-- [x] A Reference Or (Href) And Link To The "styles.css"
-- [x] Created A New File Called 'style.css'
+#### Task 1 Checklist:
+- [ ] Reference (href) to "styles.css" in your HTML file
+- [ ] Created a new file called "style.css"
 
 #### Open a pull request for your code
 
