--- a/Javascript/homework/responses/2.2-body.md
+++ b/Javascript/homework/responses/2.2-body.md
@@ -9,7 +9,7 @@ In your CSS file:
 
 This will make sure all elements fit the screen appropriately. 
 
-- Use the `justify-content`  and `align-items` attributes to center your items on the y axis and the x axis respectively. 
+- Set the `justify-content`  and `align-items` attributes to `center` so your items are centered on the y axis and the x axis respectively. 
 - You may also want to set the `min-height` to `100vh` so that height of your content will always be relative to the size of the screen.
 
 Inside the body, you can also change the color of the background, as well as the color, font, and size of your text.  I recommend using the `font-family` attribute with a few backup fonts in case your browser doesn't support your font of choice.  You can add back up fonts by following your font with a comma and another font family or type. My font-family line looks like this:
@@ -26,16 +26,23 @@ body{
     align-items: center;
     min-height: 100vh;
     font-family: "Trebuchet MS", Verdana, sans-serif;
+  	font-size: 25px;
+    background: #a5b8d9;
+  	color: #fff;
 }
 ```
 </p>
 </details>
 
-#### Task 2 Checklist:
-- [x] A Body Moving Your Clock To The Middle Of Your Screen.
-- [x] And Realigns All Your Text To The Right.
+At this point, your webpage should look something like this:
 
-![FinishedProduct](https://i.gyazo.com/58ff08d2ec3e68046c2420969d117ae3.png)
+![2.2-image](https://user-images.githubusercontent.com/32557138/106700749-761b8b00-65b3-11eb-940b-a7b4fc825e57.png)
+
+
+
+#### Task 2 Checklist:
+- [ ] Attributes that center your content
+- [ ] Stylized text for elements in your body
 
 #### Open a pull request for your code
 
