moving selector definition

--- a/Javascript/homework/responses/2.2-body.md
+++ b/Javascript/homework/responses/2.2-body.md
@@ -5,6 +5,22 @@
 In your CSS file:
 
 - Define a body selector (`.body{}`) 
+
+  <details><summary>What is a selector?</summary>
+  <p>
+
+
+  #### CSS selectors are used to "find" (or select) the HTML elements that you want to style.
+
+  ```css
+  .body{
+  
+  }
+  ```
+
+  </p>
+  </details>
+
 - Set the `display` to `flex`  
 
 This will make sure all elements fit the screen appropriately. 
