--- a/Javascript/homework/responses/2.3-clock-design.md
+++ b/Javascript/homework/responses/2.3-clock-design.md
@@ -2,32 +2,37 @@
 
 #### For the third task, we're going to begin designing a digital clock using some basic styling techniques.
 
-After you're satisfied with the body of your page, define a selector that styles elements in the `clock` class.
+After you're satisfied with the body of your page, define a selector that styles elements in the `clock` class. This selector will style the `div` we created in the last assignment that prints the time on your screen.  If this `div` tag only has an `id` property, be sure to go back to your HTML file and add a `class` attribute set to `"clock"`.
 
-### Once you have a selector that is defineing .clock we're going to move onto the steps below.
-- Within your new .clock body you're going to set a width and a height to 100px. That's going to hold your time  
-- Then add a background and a solid border using colors different from the screen's background so you can see what the box will look like.
+Within your `.clock` selector:
+
+- Set the `width` to `500px` and `height` to `200px`. This will define the rectangle in which the time is printed.
+- Add a background and a solid border using colors different from the screen's background so you can see what the box will look like.
   - Use the `background-color` and `border` attributes for these items respectively
-
 - Set your `display` to `flex` 
 - Center your text using `align-items` and `justify-content` 
 
 You may also want to adjust the margins of your clock so that theres some space between the box and the form - I simply adjusted the left margin of my clock.
+
+This is what my code looks like after these steps:
+
+![2.3-final](https://user-images.githubusercontent.com/32557138/106702386-4c179800-65b6-11eb-996c-4aa01b57a54a.png)
 
 <details><summary>Only Open This Once You Finished Your Code</summary>
 <p>
 
 
 ```css
-.Clock{
-    width: 100px;
-    height: 100px;
-    background-color: aqua;
-    border: black;
+.clock{
+  	width: 500px;
+    height: 200px;
+    font-size: 90px;
+    background: #102;
+    border: 20px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 10px;
+		margin-left: 50px;
 }
 ```
 
@@ -35,14 +40,10 @@ You may also want to adjust the margins of your clock so that theres some space 
 </p>
 </details>
 
-#### After Finishing Task Three You should have within your code
-- [x] A Selector That Is Referencing Off The .Clock Class
-- [x] And Added Colors And Layouts within your .Clock Class Body
+Now, you may notice that my border appears slightly different than yours- this is because I used the CSS box-shadow tool to create some depth to my clock and add additional borders. This effect is in no way required, but if you'd like to learn more about it, click below!
 
-<details><summary>RGBA Tool (Optional Not Required)</summary>
+<details><summary>Box-Shadow Tool (Optional)</summary>
 <p>
-
-The RGBA tool is just a way to increase color output of your choosing. It is in no way required within this program but if you're wanting to do more research about it we encourge you guys to do so!
 
 ![picture](https://i.imgur.com/bsQld9J.png)
 
@@ -50,9 +51,16 @@ The first number in each line represents the x-offset which is the horizontal di
 
 Lastly is the color. I used the rgba() tool to define my color. The first 3 numbers represent the amount of red, green, and blue in the color, respectively. The fourth number is the opacity on a scale from 0 to 1, with 0 being complete transparency and 1 being fully opaque.
 
+This tool can be very intimidating so I suggest using a box-shadow generator, such as [this one](https://html-css-js.com/css/generator/box-shadow/) and playing around with the options so that you can understand what's going on a little better and simply copy the code generated.
 
 </p>
 </details>
+
+#### Task 3 Checklist:
+
+- [ ] A clock class selector
+- [ ] Custom colors and fonts for your clock
+- [ ] The time centered on your "digital clock"
 
 #### Open a pull request for your code
 
