--- a/Javascript/homework/responses/2.4-form-layout.md
+++ b/Javascript/homework/responses/2.4-form-layout.md
@@ -8,9 +8,13 @@ Lastly, you'll define a timezone selector to style the labels and buttons used f
 
 If you're already satisfied with how your page looks because of how you styled the body, then this part is unnecessary, but I recommend you do some styling here to get a better hang of CSS attributes.
 
-#### After Finishing Task Four You should have within your code
-- [x] A Selector That Is Referencing Off The .timezone Class
-- [x] And Added Colors And Layouts within your .timezone Class Body (Which is only optional if you wanted to) 
+This is what my page looks like after this step:
+
+![final](https://user-images.githubusercontent.com/32557138/106703361-18d60880-65b8-11eb-8b0f-6466d964e235.png)
+
+#### Task 4 Checklist:
+- [ ] A timezone selector
+- [ ] Customization of timezone elements (optional)
 
 #### Open a pull request for your code
 
