--- a/Javascript/homework/responses/3.2-clock-styling.md
+++ b/Javascript/homework/responses/3.2-clock-styling.md
@@ -2,7 +2,7 @@
 
 #### In this task, we'll cover some tips and tricks to get your clock shaped and positioned correctly on your page.
 
-Inside of your HTML file, make sure you have a div with its class set to `"clock"`.  This div should be defined after your form ends, but still inside the body tags.
+Inside of your HTML file, make sure you have a div with its class set to `"clock"`.  This div should have already been defined from homework2, but if not, place it after your form ends, but still inside the body tags.
 
 Once you've established your clock div, move to your `style.css` file and define a selector for your clock class (`.clock`).  This will affect all elements with class = "clock"; therefore, the div we just defined.
 
@@ -24,21 +24,44 @@ If you load your HTML at this point, it should look something like this (give or
 - Set the position of the items in this class to relative
   - This will help us glue together the elements we're going to place on top of the clock.
 
+Now, your clock should look like this:
+
+![3.2 first step](https://user-images.githubusercontent.com/32557138/106706431-ac5e0800-65bd-11eb-9dda-a46b248f6f50.png)
+
+ <details><summary>If your page looks <i>nothing</i> like this, click here for help: </summary>
+<p>
+
+
+```css
+.clock{
+  	height: 300px;
+    width: 300px;
+    background-color: white;
+    border-radius: 50%;
+    border: solid black 10px;
+    position: relative;
+}
+```
+
+</p>
+</details>
+
 Next, use the after selector on your clock class to define a new block like so:
 
 `.clock::after{}`
 
 This will create a new element associated with the clock class that we're going to use to design a small button that will sit in the middle of the clock, on top of where the hands are going to overlap..
 
-- Set the position to absolute 
+- Set the `position` to `absolute `
   - This ensures the element is anchored to the circle we have on the page
 - Set `content` to `''` 
   - This will make sure nothing is printed inside this small block
 
-You'll also want to set the height and width to be a small square - I've set mine to 20px - and change the border-radius to 50%, just as we did with the base of the clock, to make it a circle.
+You'll also want to set the `height` and `width` to be a small square - I've set mine to 20px - and change the `border-radius` to 50%, just as we did with the base of the clock, to make it a circle.
 
 - Set `top` to 50% 
 - Set `left` to 50%  
+- Set `background-color` to `black`
 
 These two steps move the small circle to the center of the clock. 
 
@@ -51,6 +74,29 @@ This is because the object is aligned with its position relative to the left and
 This will translate the item 50% of its width to the left, and 50% of its width upwards.  Now your clock should look like this:
 
 ![clock-3-3-3](https://user-images.githubusercontent.com/32557138/106408705-ef2cae00-640c-11eb-87bf-7e3e1d9481ab.png)
+
+
+
+ <details><summary>If your clock doesn't look right, click here: </summary>
+<p>
+
+
+```css
+.clock::after{
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 50%;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: black;
+    transform: translate(-50%, -50%);
+}
+```
+
+</p>
+</details>
 
 #### Open a pull request for your code
 
