--- a/Javascript/homework/responses/3.3-clock-digits.md
+++ b/Javascript/homework/responses/3.3-clock-digits.md
@@ -16,7 +16,8 @@ Next, open up your `style.css` file and define a selector `.clock .number` - thi
 Here, you'll want to customize the appearance of the numbers on your clock. 
 
 - Set the `position` to `absolute` so that the numbers are anchored to the clock.  
-- Set the `width` and `height` to 100%. 
+- Set the `width` and `height` to 100%
+- Set the `color` to `black`
 
 The method we're going to use to get the numbers in the correct position will involve us making a square around each number that we will later rotate.  Setting the height and width to 100% will ensure that this square is always the same size as the clock background.
 
@@ -31,6 +32,43 @@ At this point your clock should look something like this:
 ![numbers-3-3-1](https://user-images.githubusercontent.com/32557138/106408744-0b304f80-640d-11eb-8107-97c06f9dab8c.png)
 
 You'll notice that the numbers overlap in one spot and you can't read them.  In the next step we'll use rotation tools to change the positioning of each digit on the clock.
+
+ <details><summary>If you're not seeing any numbers, click here: </summary>
+<p>
+
+In your CSS file:
+
+```css
+.clock .number{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: black;
+}
+```
+
+In your HTML file:
+
+```html
+<div class="clock" id="clock">
+		<div class="number number1">1</div>
+		<div class="number number2">2</div>
+		<div class="number number3">3</div>
+		<div class="number number4">4</div>
+		<div class="number number5">5</div>
+		<div class="number number6">6</div>
+		<div class="number number7">7</div>
+		<div class="number number8">8</div>
+		<div class="number number9">9</div>
+		<div class="number number10">10</div>
+		<div class="number number11">11</div>
+		<div class="number number12">12</div>
+	</div>
+```
+
+</p>
+</details>
 
 #### Open a pull request for your code
 
