--- a/Javascript/homework/responses/3.4-rotation.md
+++ b/Javascript/homework/responses/3.4-rotation.md
@@ -4,13 +4,13 @@
 
 To move the digits to their respective positions on the clock, we could individually position them using the `top` and `left` attributes, but this would be a very tedious task.  Instead, we're going to use a trick to change the position of each digit using the `rotate()` tool in the `transform` attribue.
 
-- Define a variable `--rotation` and set it equal to 0.  
+- Inside your `.clock .number` selector, define a variable `--rotation` and set it equal to 0.  
 
 This variable will hold the number of degrees that the text will be rotated so that it sits in the right position on the clock.  Make sure to include the preceding dashes when defining `--rotation` as this is what will make this value a variable. Your code should look like this:
 
 `--rotation: 0;`
 
-- Use the `transform` attribute to call `rotate()` on your rotation variable.  
+- Directly below this in the `.clock .number` selector, use the `transform` attribute to call `rotate()` on your rotation variable.  
 
 When using a variable in CSS, its important to surround your variable's name in the `var()` function like so:
 
@@ -19,6 +19,10 @@ When using a variable in CSS, its important to surround your variable's name in 
 This line of code will rotate all divs inside both the clock class and any class with "number" in its name to rotate by a varying degree.  Right now, this degree is set to 0 for all numbers.
 
 Now, all that's left to do is assign varying degrees for each of the numbers.  Since there are 12 numbers on a clock, and a circular clock is 360 degrees, each number will be placed 30 degrees apart. 
+
+- Define selectors for each number 1 thorugh 11 like this:
+
+  `.clock .number1 { }`
 
 - Starting with number 1 and ending with number 11, set the rotation variable of each number to increase by 30 degrees.
 
@@ -37,6 +41,37 @@ Now, your clock should look something like this:
 ![numbers-3-4-1](https://user-images.githubusercontent.com/32557138/106408779-2307d380-640d-11eb-94b1-1cfd188aaa8c.png)
 
 *Don't forget to delete the border from `.clock .number` after this step if you included it earlier.*
+
+ <details><summary>If your numbers are still out of whack, click here: </summary>
+<p>
+
+
+```css
+.clock .number{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: black;
+    --rotation: 0;
+    transform: rotate(var(--rotation));
+}
+
+.clock .number1 { --rotation: 30deg; }
+.clock .number2 { --rotation: 60deg; }
+.clock .number3 { --rotation: 90deg; }
+.clock .number4 { --rotation: 120deg; }
+.clock .number5 { --rotation: 150deg; }
+.clock .number6 { --rotation: 180deg; }
+.clock .number7 { --rotation: 210deg; }
+.clock .number8 { --rotation: 240deg; }
+.clock .number9 { --rotation: 270deg; }
+.clock .number10 { --rotation: 300deg; }
+.clock .number11 { --rotation: 330deg; }
+```
+
+</p>
+</details>
 
 #### Open a pull request for your code
 
