--- a/Javascript/homework/responses/3.5-clock-hands.md
+++ b/Javascript/homework/responses/3.5-clock-hands.md
@@ -32,8 +32,9 @@ We'll want all three of our hands to have some similar attributes, so in your cs
 
 We'll change this later, but just so you get an idea of what we're doing, 
 
-- Set your `height` and `width` to *some arbitrary values* and your `background color` to `black`.  
-- I set my height to 40% and my width to 10px and this is how my clock looks at this point in the code:
+- Set your `height` and `width` to `40%` (this is 40% the heigh of the clock) and `10px` respectively and your `background-color` to `black`.  
+
+This is how my clock looks at this point in the code:
 
 ![hands-3-5-1](https://user-images.githubusercontent.com/32557138/106408826-39159400-640d-11eb-9805-743f857135ac.png)
 
@@ -41,9 +42,46 @@ As you can see, the hand is slightly off center, which is the same issue we had 
 
 `transform: translate(-50%, 0)`
 
-- Add a white border around the hands 
+- Add a thin (1px) white border around the hands 
   - This will make the hands easier to see when they're overlapping
 - Finally, round the edges of the hands by setting the `border-top-left-radius` and `border-top-right-radius` attributes to `10px`.
+
+Now, your clock should look like this:
+
+![one hand done](https://user-images.githubusercontent.com/32557138/106711728-ed5a1a80-65c5-11eb-9655-cd4de31ebf84.png)
+
+*
+
+ <details><summary>If not, check this out: </summary>
+<p>
+
+In your HTML file:
+
+```html
+<div class="hand hour" data-hour-hand></div>
+<div class="hand minute" data-minute-hand></div>
+<div class="hand second" data-second-hand></div>
+```
+
+In your CSS file:
+
+```css
+.clock .hand{
+    bottom: 50%;
+    left: 50%;
+    position: absolute;
+    height: 40%;
+    width: 10px;
+    background-color: black;
+    transform: translate(-50%, 0);
+    border: 1px solid white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+```
+
+</p>
+</details>
 
 Now, let's style each hand to be unique.  
 
@@ -60,12 +98,9 @@ In each of these blocks,
 - Customize the hands so that the **seconds** hand is the **longest and thinnest**, and the **hour** hand is **shortest and widest**
 - Also, override the current `background-color` attribute for the seconds hand by setting it to `red` in the `.clock .hand.second` block.
 
-Now, your clock should look something like this:
+Set the second hand's `z-index` attribute to 12
 
-![hands-3-5-2](https://user-images.githubusercontent.com/32557138/106408862-4a5ea080-640d-11eb-8489-15db06b7e757.png)
-
-- Set the second hand's `z-index` attribute to 12
-  - This makes sure that the second hand is always on top of the others
+- This makes sure that the second hand is always on top of the others
 
 Similarly, we'll want the hour hand to always be on the bottom and the minute hand in the middle, 
 
@@ -76,6 +111,37 @@ We'll also want the small circle in the center of the clock to always be on top 
 - Set the `z-index` in `clock::after` to 100.  
 
 This attribute defines the order in which items will appear on the z-axis, so items with a higher z-index will appear to sit on top of items with a lower z-index.
+
+Now, your clock should look something like this:
+
+![hands-3-5-2](https://user-images.githubusercontent.com/32557138/106408862-4a5ea080-640d-11eb-8489-15db06b7e757.png)
+
+ <details><summary>If it doesn't, check this out: </summary>
+<p>
+
+```css
+.clock .hand.second{
+    height: 45%;
+    width: 3px;
+    background-color: red;
+    z-index: 12;
+}
+.clock .hand.minute{
+    height: 40%;
+    width: 7px;
+    background-color: black;
+    z-index: 11;
+}
+.clock .hand.hour{
+    height: 35%;
+    width: 11px;
+    background-color: black;
+    z-index: 10;
+}
+```
+
+</p>
+</details>
 
 Now that we have all of the styling done for the clock, it's time to get the hands moving!
 
