task 6 and small change to task 1

--- a/Javascript/homework/responses/3.1-integrating-code.md
+++ b/Javascript/homework/responses/3.1-integrating-code.md
@@ -6,7 +6,7 @@ Open new css and html in visual studio code in your week 3 folder.  This week wi
 
 `<script defer src="script.js"></script>`
 
-In script.js, you can copy and paste everything that was inside the script tag (except for the script tags themselves) for your week 2 clock, you'll just want to delete the line(s) that prints the time onto the screen. *The line(s) you want to delete should look something like this: `document.getElementById("clock").innerText = time;`*
+In script.js, you can copy and paste everything that was inside the script tag (except for the script tags themselves) for your week 2 clock, you'll just want to delete the lines that calculate the time and print it onto the screen - this should be everything inside your "showTime()" or similarly-named function.
 
 You can also copy your HTML from last week, but make sure to remove the JavaScript code from your HTML document, as well as the script tags, and replace it with the script tag above. Your CSS code from week 2 can also be copied as long as you clear out the styling in the `.clock` selector.
 
