--- a/Javascript/homework/responses/3.6-moving-hands.md
+++ b/Javascript/homework/responses/3.6-moving-hands.md
@@ -9,6 +9,7 @@ In your CSS file,
 - Define a variable `--rotation` in your `.clock .hand` selector 
   - Initialize it to 0
   - This will serve as a variable to hold the number of degrees our hand will be rotated at any given second. 
+  - Make sure you define this variable before you set the transform attribute
 
 To actually utilize this variable and make our hand rotate, 
 
@@ -90,6 +91,38 @@ Finally, add a call to `setInterval` in global space at the top of your code to 
 As you may notice, the clock starts with all hands facing the 12 when we start the page because all hands are initialized to have a rotation variable equal to 0.  To fix this bug, simply call your `showTime` function once at the bottom of your code. 
 
 Now, when you refresh the page, the time will already be set on the clock. Also, thanks to the function you wrote in last week's code for the timezone selector, you shouldn't have to do any work to get this feature working on your analog clock!
+
+Finally, your clock should be working and should look like this:
+
+![final clock](https://user-images.githubusercontent.com/32557138/106713893-14661b80-65c9-11eb-8bd1-1ef0407f5aeb.png)
+
+ <details><summary>If your clock isn't working right, check this out: </summary>
+<p>
+
+```js
+function showTime()
+{
+  const day = new Date();
+  const secondsRatio = day.getSeconds()/60;
+  const minutesRatio = (day.getMinutes() + secondsRatio)/60;
+  const hoursRatio = (day.getHours() + minutesRatio + offset) /12;
+  
+  const hourHand = document.querySelector('[data-hour-hand');
+  const minuteHand = document.querySelector('[data-minute-hand');
+  const secondHand = document.querySelector('[data-second-hand');
+  
+  setRotation(secondHand, secondsRatio);
+  setRotation(minuteHand, minutesRatio);
+  setRotation(hourHand, hoursRatio);
+}
+
+function setRotation(element, rotationRatio){
+  element.style.setProperty(`--rotation`, rotationRatio *360);
+}
+```
+
+</p>
+</details>
 
 #### Open a pull request for your code
 
