--- a/Javascript/homework/responses/4.2-more-buttons.md
+++ b/Javascript/homework/responses/4.2-more-buttons.md
@@ -2,16 +2,37 @@
 
 #### Next, we're going to create a set of radio buttons that allow a user to choose if they’d like to see the time on an analog clock or on a digital clock. This task will demonstrate a different approach to radio buttons.
 
-- Open another form tag directly below the one you have for the timezone selector.  
-- Similar to how you set up the timezone buttons, open a div tag with a unique class (I named mine "view") 
-- Insert 2 radio buttons. 
-  - Make sure these radio buttons share the same `name` attribute and have unique `value` and `id` attributes.
+1. Open another form tag directly below the one you have for the timezone selector. 
+   - Similar to how you set up the timezone buttons, open a div tag with it's `class` set to `"view"` inside the form.
+
+2. Inside this `div`, insert 2 radio buttons. 
+   - Make sure these radio buttons share the same `name` attribute and have unique `value` and `id` attributes.
 
 These two radio buttons should have the user input whether they'd like to see the time on a digital clock or an analog clock.  There's no need to add a submit button as we will set up our page to change on the click of the radio button rather than on the submit button.
 
 After this step, your page should look like this:
 
 ![adding-buttons-4-2](https://user-images.githubusercontent.com/32557138/106409084-cb1d9c80-640d-11eb-913a-f1df504121ba.png)
+
+
+
+ <details><summary>If your radio buttons aren't showing up right, check this out: </summary>
+<p>
+
+
+```html
+<form>
+	<div class="view">
+		<input type="radio" id="digital" name="view" value="digital">
+		<label for="digital">Digital</label><br>
+		<input type="radio" id="analog" name="view" value="analog">
+		<label for="analog">Analog</label><br>
+	</div>
+</form>
+```
+
+</p>
+</details>
 
 At this point, you can customize the appearance of these two radio buttons in your CSS file by defining a block that selects all items in your "view" class.  I suggest adding some margins and padding so that items don't look so crowded.
 
