--- a/Javascript/homework/responses/3.4-rotation.md
+++ b/Javascript/homework/responses/3.4-rotation.md
@@ -4,13 +4,13 @@
 
 To move the digits to their respective positions on the clock, we could individually position them using the `top` and `left` attributes, but this would be a very tedious task.  Instead, we're going to use a trick to change the position of each digit using the `rotate()` tool in the `transform` attribue.
 
-- Inside your `.clock .number` selector, define a variable `--rotation` and set it equal to 0.  
+1. Inside your `.clock .number` selector, define a variable `--rotation` and set it equal to 0.  
 
 This variable will hold the number of degrees that the text will be rotated so that it sits in the right position on the clock.  Make sure to include the preceding dashes when defining `--rotation` as this is what will make this value a variable. Your code should look like this:
 
 `--rotation: 0;`
 
-- Directly below this in the `.clock .number` selector, use the `transform` attribute to call `rotate()` on your rotation variable.  
+2. Directly below this line in the `.clock .number` selector, use the `transform` attribute to call `rotate()` on your rotation variable.  
 
 When using a variable in CSS, its important to surround your variable's name in the `var()` function like so:
 
@@ -20,19 +20,19 @@ This line of code will rotate all divs inside both the clock class and any class
 
 Now, all that's left to do is assign varying degrees for each of the numbers.  Since there are 12 numbers on a clock, and a circular clock is 360 degrees, each number will be placed 30 degrees apart. 
 
-- Define selectors for each number 1 thorugh 11 like this:
+3. Define selectors for each number 1 thorugh 11 like this:
 
-  `.clock .number1 { }`
+   `.clock .number1 { }`
 
-- Starting with number 1 and ending with number 11, set the rotation variable of each number to increase by 30 degrees.
+4. Starting with number 1 and ending with number 11, set the rotation variable of each number to increase by 30 degrees.
 
-  - For example, the code for number 1 will look like this:
+5. For example, the code for number 1 will look like this:
 
-    `.clock .number1 { --rotation: 30deg; }`
+   `.clock .number1 { --rotation: 30deg; }`
 
-- Repeat this until you reach number 11, which should look like this:
+6. Repeat this until you reach number 11, which should look like this:
 
-  ​		`.clock .number11 { --rotation: 330deg; }`
+​		`.clock .number11 { --rotation: 330deg; }`
 
 If you refresh your HTML page, you'll see there's no need to change anything for `.clock .number12` since the 12 is sitting at the top of the clock by default.
 
