--- a/Javascript/homework/responses/3.5-clock-hands.md
+++ b/Javascript/homework/responses/3.5-clock-hands.md
@@ -4,53 +4,48 @@
 
 Within your clock div you're going to include three more divsions - these will represent the hands on our clock.  
 
-- For each div, set the class to "hand [type of hand]" and set the data-* attribute to `data-[type of hand]-hand`.  
+1. For each div, set the class to "hand [type of hand]" and set the data-* attribute to `data-[type of hand]-hand`.  
 
-  - For example, the div tag for the hour hand would look like:
+   - For example, the div tag for the hour hand would look like:
 
-    ​	`<div class="hand hour" data-hour-hand></div>`
+   ​	`<div class="hand hour" data-hour-hand></div>`
 
-  - Repeat this for the minute hand and the second hand.
+2. Repeat this for the minute hand and the second hand.
 
 Though this div-defining process seems complicated, it will greatly simplify things when we design our clock hands in the CSS file.
 
 We'll want all three of our hands to have some similar attributes, so in your css file, 
 
-- Define a selector for all items within the clock class with "hand" in their class.  
+3. Define a selector for all items within the clock class with "hand" in their class.  
+   - The definition of this field will be similar to the way we defined the first number section in the last task, so your code should look like this:
 
-  - The definition of this field will be similar to the way we defined the first number section in the last task, so your code should look like this:
+   ​		`.clock .hand { }`
 
-    ​		`.clock .hand { }`
+4. Inside of this selector, set the `bottom` and `left` attributes to `50%` 
+   - This places the hands at the center of the clock.  
 
-- Inside of this block, set the `bottom` and `left` attributes to `50%` 
-  
-- This places the hands at the center of the clock.  
-  
-- Set `position` to `absolute` 
-  
-  - This anchors the hands to the clock.
+5. Set `position` to `absolute` 
+   - This anchors the hands to the clock.
 
 We'll change this later, but just so you get an idea of what we're doing, 
 
-- Set your `height` and `width` to `40%` (this is 40% the heigh of the clock) and `10px` respectively and your `background-color` to `black`.  
+6. Set your `height` and `width` to `40%` (this is 40% the heigh of the clock) and `10px` respectively and your `background-color` to `black`.  
 
 This is how my clock looks at this point in the code:
 
 ![hands-3-5-1](https://user-images.githubusercontent.com/32557138/106408826-39159400-640d-11eb-9805-743f857135ac.png)
 
-As you can see, the hand is slightly off center, which is the same issue we had earlier with the circle in the center of the clock.  Since we just want to move the hand to the left, we'll use the same trick as we did earlier, but this time the y-coordinate in the translate function will be 0, like so:
+As you can see, the hand is slightly off center, which is the same issue we had earlier with the circle in the center of the clock.  Since we just want to move the hand to the left, we'll use the same trick as we did earlier, but this time the y-coordinate in the translate function will be 0.
 
-`transform: translate(-50%, 0)`
+7. Still in the hand selector, set `transform` to `translate(-50%, 0)`
+8. Add a thin (1px) white border around the hands 
+   - This will make the hands easier to see when they're overlapping
 
-- Add a thin (1px) white border around the hands 
-  - This will make the hands easier to see when they're overlapping
-- Finally, round the edges of the hands by setting the `border-top-left-radius` and `border-top-right-radius` attributes to `10px`.
+9. Finally, round the edges of the hands by setting the `border-top-left-radius` and `border-top-right-radius` attributes to `10px`.
 
 Now, your clock should look like this:
 
 ![one hand done](https://user-images.githubusercontent.com/32557138/106711728-ed5a1a80-65c5-11eb-9655-cd4de31ebf84.png)
-
-*
 
  <details><summary>If not, check this out: </summary>
 <p>
@@ -85,30 +80,30 @@ In your CSS file:
 
 Now, let's style each hand to be unique.  
 
-- To select the second hand, we'll define a selector:
+10. To select the second hand, we'll define a selector:
 
-  ​		`.clock .hand.second{ }`
+    `.clock .hand.second{ }`
 
-  - Make sure to leave no space between `.hand` and `.second`, as this will be crucial to your definition.  
+    - Make sure to leave no space between `.hand` and `.second`, as this will be crucial to your definition.  
 
-- Repeat this process for the minute hand and the hour hand.
+11. Repeat step 10 for the minute hand and the hour hand.
 
-In each of these blocks, 
+In each of these selectors, 
 
-- Customize the hands so that the **seconds** hand is the **longest and thinnest**, and the **hour** hand is **shortest and widest**
-- Also, override the current `background-color` attribute for the seconds hand by setting it to `red` in the `.clock .hand.second` block.
+12. Customize the hands so that the **seconds** hand is the **longest and thinnest**, and the **hour** hand is **shortest and widest**
 
-Set the second hand's `z-index` attribute to 12
+13. Override the current `background-color` attribute for the seconds hand by setting it to `red` in the `.clock .hand.second` block.
 
-- This makes sure that the second hand is always on top of the others
+14. Set the second hand's `z-index` attribute to 12
+    - This makes sure that the second hand is always on top of the others
 
 Similarly, we'll want the hour hand to always be on the bottom and the minute hand in the middle, 
 
-- Set their `z-index` attributes to 10 and 11 respectively 
+15. Set hour hand and minute hand's `z-index` attributes to 10 and 11 respectively 
 
 We'll also want the small circle in the center of the clock to always be on top of all of the hands to hide the overlap. 
 
-- Set the `z-index` in `clock::after` to 100.  
+16. Set the `z-index` in `clock::after` to 100.  
 
 This attribute defines the order in which items will appear on the z-axis, so items with a higher z-index will appear to sit on top of items with a lower z-index.
 
